--- a/maps.ipynb
+++ b/maps.ipynb
@@ -38,15 +38,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# City names\n",
     "cities = [\n",
     "    \"Aliso Viejo\", \"Anaheim\", \"Brea\", \"Buena Park\", \"Costa Mesa\", \"Cypress\", \"Dana Point\",\n",
     "    \"Fountain Valley\", \"Fullerton\", \"Garden Grove\", \"Huntington Beach\", \"Irvine\", \"La Habra\",\n",
     "    \"La Palma\", \"Laguna Beach\", \"Laguna Hills\", \"Laguna Niguel\", \"Laguna Woods\", \"Lake Forest\",\n",
     "    \"Los Alamitos\", \"Mission Viejo\", \"Newport Beach\", \"Orange\", \"Placentia\", \"Rancho Santa Margarita\",\n",
     "    \"San Clemente\", \"San Juan Capistrano\", \"Santa Ana\", \"Seal Beach\", \"Stanton\", \"Tustin\",\n",
-    "    \"Villa Park\", \"Westminster\", \"Yorba Linda\"\n",
-    "]"
+    "    \"Villa Park\", \"Westminster\", \"Yorba Linda\"]"
    ]
   },
   {
@@ -95,13 +93,11 @@
     }
    ],
    "source": [
-    "\n",
     "edge_density = 0.2  # Roughly 20% of all possible edges will be created\n",
     "for i in range(n):\n",
     "    for j in range(i + 1, n):\n",
     "        if np.random.random() < edge_density:  # Decide whether to create an edge\n",
-    "            # Assign a random weight (distance) between 1 and 100\n",
-    "            distance = np.random.randint(1, 101)\n",
+    "            distance = np.random.randint(1, 101)    # Assign a random weight (distance) between 1 and 100\n",
     "            graph[i, j] = graph[j, i] = distance  # Ensure the graph is undirected\n",
     "graph[:5, :5]"
    ]
@@ -129,9 +125,8 @@
     "        for j in range(n):\n",
     "            if graph[i, j] < np.inf:\n",
     "                next_node[i, j] = j\n",
-    "    \n",
-    "    # Compute shortest paths\n",
-    "    for k in range(n):\n",
+    "\n",
+    "    for k in range(n):      # Compute shortest paths\n",
     "        for i in range(n):\n",
     "            for j in range(n):\n",
     "                if dist[i, k] + dist[k, j] < dist[i, j]:\n",
@@ -243,7 +238,6 @@
    "outputs": [],
    "source": [
     "def reconstruct_path(start, end, next_node, city_names):\n",
-    "    \"\"\"Reconstruct the shortest path from start to end using the next_node matrix.\"\"\"\n",
     "    path = []\n",
     "    if next_node[start, end] == -1:\n",
     "        return path  # No path exists\n",
